# hdfs-kerberos-no-verify

./: .gitignore  README.md  build_pypi.sh  pyproject.toml
src/hdfs_kerberos_no_verify/: __init__.py  kerberos_no_verify.py
