[build-system]
# any major version Jinja2 3.x  
# any major version flake8 6.x
# requires = ["setuptools>=61.0", "Jinja2~=3", "flake8~=6"]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hdfs-kerberos-no-verify"
version = "0.0.1"
authors = [
  { name="Thai Thien", email="thien.thai.meow@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3.8 ",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 1 - Planning",
    'Intended Audience :: Developers',
    "Operating System :: OS Independent",
]

dependencies = [
    # "requests_kerberos >= 0.14",
    "hdfs[kerberos] >= 2.7"
]


# [project.urls]
# "Homepage" = "https://github.com/pypa/sampleproject"
# "Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]
include = ["hdfs_kerberos_no_verify*"]



