[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hdfs-kerberos-no-verify"
version = "0.0.1"
authors = [
  { name="Thai Thien", email="thien.thai.meow@gmail.com" },
]
description = "A custom of from hdfs.ext.kerberos import KerberosClient from hdfs package that allow you to use with self-signed https url."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3.8 ",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 1 - Planning",
    'Intended Audience :: Developers',
    "Operating System :: OS Independent",
]

dependencies = [
    # "requests_kerberos >= 0.14",
    "hdfs[kerberos] >= 2.7"
]


[project.urls]
"Homepage" = "https://github.com/ttpro1995/hdfs-kerberos-no-verify"
"Bug Tracker" = "https://github.com/ttpro1995/hdfs-kerberos-no-verify/issues"

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]
include = ["hdfs_kerberos_no_verify*"]



